--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,6 @@
     box-sizing: border-box;
 }
 
-html {
-    overflow: hidden;
-}
-
 html,
 body {
     margin: 0;
@@ -19,10 +15,10 @@ body {
 }
 
 body {
-    font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     line-height: 1.4em;
     background: #efefef;
-    color: #4d4d4d;
+    color: #333;
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: antialiased;
     -ms-font-smoothing: antialiased;
@@ -35,4 +31,39 @@ body {
     height: 100%;
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
+}
+
+section {
+    width: 100%;
+    padding: 50px;
+    background: white;
+    border-bottom: 1px solid #ededed;
+    vertical-align: top;
+}
+
+section > summary {
+  vertical-align: top;
+  display: inline-block;
+  min-width: 400px;
+}
+
+section > aside {
+    vertical-align: top;
+    display: inline-block;
+    margin-left: 100px;
+}
+
+pre {
+    background: whitesmoke;
+    border-radius: 5px;
+    max-height: 500px;
+    overflow: auto;
+    padding: 20px;
+}
+
+h1 {
+    margin: 0;
+    padding: 50px;
+    background: white;
+    border-bottom: 1px solid #ededed;
 }
